[gd_scene load_steps=5 format=3 uid="uid://buxdrj3s5ggsp"]

[ext_resource type="Script" path="res://game/ui/island/island.gd" id="1_2ja14"]
[ext_resource type="Texture2D" uid="uid://cmq586wlmdn81" path="res://assets/Kenney_Pirates/PNG/Default size/Tiles/tile_24.png" id="1_dtwwo"]
[ext_resource type="PackedScene" uid="uid://dpqniwqobneaj" path="res://game/level/island_interaction.tscn" id="3_lw5h5"]
[ext_resource type="PackedScene" uid="uid://c5h151q3b51jt" path="res://game/ui/island/shop_screen.tscn" id="4_rq6in"]

[node name="Island" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2ja14")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.199181, 0.347169, 0.84438, 1)

[node name="Island" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 197.0
offset_top = 62.0
offset_right = -236.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_dtwwo")

[node name="SetSailButton" type="Button" parent="."]
layout_mode = 0
offset_left = 496.0
offset_top = 568.0
offset_right = 600.0
offset_bottom = 611.0
theme_override_font_sizes/font_size = 26
text = "set_sail"

[node name="IslandShop" parent="." instance=ExtResource("3_lw5h5")]
layout_mode = 0
offset_left = 72.0
offset_top = 203.0
offset_right = 136.0
offset_bottom = 267.0
name_id = "tavern"

[node name="ShopScreen" parent="." instance=ExtResource("4_rq6in")]
visible = false
layout_mode = 1

[connection signal="button_down" from="SetSailButton" to="." method="_on_set_sail_button_button_down"]
